--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Joaquin Urbano",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0"
